--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /ProjectUAS_EzBooking_Server/nbproject/private/
 /ProjectUAS_EzBooking_Client/nbproject/private/
+/ProjectUAS_EzBooking_Client/build/
