--- a/ProjectUAS_EzBooking_Client/nbproject/project.properties
+++ b/ProjectUAS_EzBooking_Client/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProjectUAS_EzBooking_Client
+application.vendor=Alvin Fernando
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,13 @@ dist.jar=${dist.dir}/ProjectUAS_EzBooking_Client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProjectUAS_EzBooking_Client
+endorsed.classpath=
 excludes=
+file.reference.jdatepicker-1.3.4.jar=C:\\Users\\Alvin Fernando\\Downloads\\jdatepicker-1.3.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jdatepicker-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProjectUAS_EzBooking_Client
-main.class=projectuas_ezbooking_client.ProjectUAS_EzBooking_Client
+main.class=MainForm.FormDashboard
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
