--- a/ProjectUAS_EzBooking_Client/nbproject/project.properties
+++ b/ProjectUAS_EzBooking_Client/nbproject/project.properties
@@ -35,11 +35,9 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProjectUAS_EzBooking_Client
 endorsed.classpath=
 excludes=
-file.reference.jdatepicker-1.3.4.jar=C:\\Users\\Alvin Fernando\\Downloads\\jdatepicker-1.3.4.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.jdatepicker-1.3.4.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
