update admin ke 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /ProjectUAS_EzBooking_Server/nbproject/private/
 /ProjectUAS_EzBooking_Client/nbproject/private/
 /ProjectUAS_EzBooking_Client/build/
+/ProjectUAS_EzBooking_Server/build/
