--- a/ProjectUAS_EzBooking_Server/nbproject/project.properties
+++ b/ProjectUAS_EzBooking_Server/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProjectUAS_EzBooking_Server
+application.vendor=Jeremy
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,8 +33,9 @@ dist.jar=${dist.dir}/ProjectUAS_EzBooking_Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProjectUAS_EzBooking_Server
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.28.jar=D:\\Semester 4\\Disprog\\mysql-connector-java-8.0.28.jar
+file.reference.mysql-connector-java-8.0.28.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
 javac.classpath=\
