--- a/ProjectUAS_EzBooking_Server/nbproject/project.properties
+++ b/ProjectUAS_EzBooking_Server/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=ProjectUAS_EzBooking_Server
-application.vendor=Jeremy
+application.vendor=Asus
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -35,11 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProjectUAS_EzBooking_Server
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.28.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.28.jar
+file.reference.mysql-connector-java-8.0.28.jar-1=D:\\SEMESTER 4\\Distributed Programming\\Materi\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${file.reference.mysql-connector-java-8.0.28.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
