--- a/ProjectUAS_EzBooking_Server/nbproject/project.properties
+++ b/ProjectUAS_EzBooking_Server/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProjectUAS_EzBooking_Server
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.28.jar=D:\\Semester 4\\Disprog\\mysql-connector-java-8.0.28.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.28.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
