--- a/ProjectUAS_EzBooking_Client/nbproject/project.properties
+++ b/ProjectUAS_EzBooking_Client/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProjectUAS_EzBooking_Client
-main.class=Restaurant.FormDashboardRestaurant
+main.class=MainForm.FormRegisterRestaurant
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
