--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /ProjectUAS_EzBooking_Client/nbproject/private/
 /ProjectUAS_EzBooking_Client/build/
 /ProjectUAS_EzBooking_Server/build/
+/ProjectUAS_EzBooking_Client/dist/
