--- a/ProjectUAS_EzBooking_Client/nbproject/project.properties
+++ b/ProjectUAS_EzBooking_Client/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProjectUAS_EzBooking_Client
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=../jcalendar-1.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
