--- a/ProjectUAS_EzBooking_Client/nbproject/project.properties
+++ b/ProjectUAS_EzBooking_Client/nbproject/project.properties
@@ -37,13 +37,15 @@ dist.jlink.output=${dist.jlink.dir}/ProjectUAS_EzBooking_Client
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=../jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.28.jar=../mysql-connector-java-8.0.28.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
