--- a/ProjectUAS_EzBooking_Client/nbproject/private/private.properties
+++ b/ProjectUAS_EzBooking_Client/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Alvin Fernando\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=/Users/skyclyve/Library/Application Support/NetBeans/13/build.properties
