--- a/ProjectUAS_EzBooking_Server/nbproject/private/private.properties
+++ b/ProjectUAS_EzBooking_Server/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 file.reference.mysql-connector-java-8.0.28.jar=E:\\Kuliah\\Semester 4\\Distributed Programming (DisProg)\\project-uas-distprog\\mysql-connector-java-8.0.28.jar
-user.properties.file=C:\\Users\\Alvin Fernando\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+user.properties.file=/Users/skyclyve/Library/Application Support/NetBeans/13/build.properties
