--- a/ProjectUAS_EzBooking_Client/nbproject/private/private.properties
+++ b/ProjectUAS_EzBooking_Client/nbproject/private/private.properties
@@ -1,1 +1,8 @@
-user.properties.file=C:\\Users\\Alvin Fernando\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Muhammad Ikhsan\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
