--- a/ProjectUAS_EzBooking_Server/nbproject/private/private.properties
+++ b/ProjectUAS_EzBooking_Server/nbproject/private/private.properties
@@ -1,2 +1,8 @@
-file.reference.mysql-connector-java-8.0.28.jar=E:\\Kuliah\\Semester 4\\Distributed Programming (DisProg)\\project-uas-distprog\\mysql-connector-java-8.0.28.jar
-user.properties.file=C:\\Users\\Alvin Fernando\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Muhammad Ikhsan\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
